@@ -1,3 +1,7 @@
+2019-06-20  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/tinytest/test_arrays.R: From tests/arrays.R
+
 2019-06-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Added Suggests: tinytest
